:sparkles:Added question correction to gap text with dropdown (#74)+:iphone:Optimized gap text dropdown for mobile

--- a/src/Components/Main/Question/Question.css
+++ b/src/Components/Main/Question/Question.css
@@ -112,7 +112,9 @@
 }
 
 .question-correction-title{
-  font-weight: 550;
+  font-size: 19px;
+  font-weight: 700;
+  margin-bottom: 2px;
 }
 
 .question-scrollToBottom-button{
